k8s/overlays/prod/backend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: homepage
spec:
  template:
    spec:
      containers:
      - name: backend
